2003-02-20  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImgGIF.c (GetDataBlock): Removed pointless static
	variable ZeroDataBlock [Bug #664788]

	* unix/tkUnixFont.c (CanUseFallback): Added argument, passed
	through from callers to FindSubFontForChar(), so that pointers
	into the old subfont table to be updated when that table is
	reallocated, avoiding a (sometimes fatal) FMR.
	[Bugs #618872 and #689357]

2003-02-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXKeyEvent.c: fix for uninitialized var warning.

2003-02-19  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXMouseEvents.c (GeneratePollingEvents): In the case
	where there was a capture window, we were sending the events to
	the capture window.  But the capture window (return value or
	TkMacOSXGetCapture) is always a toplevel.  So this is wrong in 
	the case that the Event's toplevel IS the capture window - in
	which case the event should go to the subwindow most closely
	containing the event.
	
2003-02-19  Benjamin Riefenstahl <Benjamin.Riefenstahl@epost.de>
	       & Jim Ingham <jingham@apple.com>

	This patch changes the default Tk behavior so that events
	are by default routed to the standard event handlers after
	Tk has looked at them.
	
	* macosx/tkMacOSXEvent.h: Rename "handledByTk" into
	"stopProcessing".
	
	* macosx/tkMacOSXEvent.c: Update erroneous comments and
	remove unused includes.
	(TkMacOSXProcessAppleEvent): Don't declare events
	handled that we didn't even look at.
	(TkMacOSXProcessEvent): Add a comment on policy for
	"stopProcessing".
	(TkMacOSXProcessEvent): Remove "handling" of events that	
	are not our business.
	(TkMacOSXProcessEvent): Rename "handledByTk" into
	"stopProcessing".
	(ReceiveAndProcessEvent): Ditto.
	(ReceiveAndProcessEvent): Tune error production of
	message.
	
	* macosx/tkMacOSXKeyEvent.c (TkMacOSXProcessKeyboardEvent):
	Rename "handledByTk" into "stopProcessing".
	
	* macosx/tkMacOSXWindowEvent.c: Ditto.
